#PK-1948 Optimization for order exchange

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/ReturnAndExchangeModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/ReturnAndExchangeModal.razor
@@ -220,6 +220,10 @@
                             </TableBody>
                         </Table>
                     </Div>
+                    <Field Class="mt-2">
+                        <FieldLabel>@L["DeliveryCost"] *</FieldLabel>
+                        <NumericEdit TValue="decimal" @bind-Value="DeliveryCost" />
+                    </Field>
                 </Div>
             }
         </ModalBody>
