#PK-1950 Update column label

--- a/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/PayoutDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantPayouts/PayoutDetails.razor
@@ -58,7 +58,7 @@
         </DataGridColumn>
         <DataGridColumn TItem="TenantPayoutRecordDto"
                         Field="@nameof(TenantPayoutRecordDto.GrossOrderAmount)"
-                        Caption="@L["OrderAmount"]"
+                        Caption="@L["PaymentAmount"]"
                         TextAlignment="TextAlignment.End">
             <DisplayTemplate>
                 <Span Class="text-success">
