Fix for Groupbuy Delivery Method

--- a/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/LogisticsManagement/LogisticsProviderSettings.razor
@@ -1615,7 +1615,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-3">
-                                                            <label for="h-freight" class="form-label">@L["PaymentMethod"]<span class="text-danger"> *</span></label>
+                                                            <label for="h-freight" class="form-label">@L["CODPaymentMethod"]<span class="text-danger"> *</span></label>
                                                         </div>
                                                         <div class="col-8">
                                                             <Select @bind-SelectedValue="TCatFreeze.TCatPaymentMethod">
@@ -1742,7 +1742,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-3">
-                                                            <label for="h-freight" class="form-label">@L["PaymentMethod"]<span class="text-danger"> *</span></label>
+                                                            <label for="h-freight" class="form-label">@L["CODPaymentMethod"]<span class="text-danger"> *</span></label>
                                                         </div>
                                                         <div class="col-8">
                                                             <Select @bind-SelectedValue="TCatFrozen.TCatPaymentMethod">
